--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weding Store</title>
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:600i,700|Open+Sans:400,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:600i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -114,7 +115,7 @@
                                     <ul>
                                         <li>
                                             <div>
-                                                <img src="images/cart-1.jpg">
+                                                <img alt="" src="images/cart-1.jpg">
                                             </div>
                                             <div class="item-info">
                                                 <a href="#">
@@ -128,7 +129,7 @@
                                         </li>
                                         <li>
                                             <div>
-                                                <img src="images/cart-2.jpg">
+                                                <img alt="" src="images/cart-2.jpg">
                                             </div>
                                             <div class="item-info">
                                                 <a href="#">
@@ -218,8 +219,8 @@
                     <div class="items-title">
                         <ul id="myTab" class="nav featured-items" role="tablist">
                             <li><a class="active"  id="featured-tab" data-toggle="tab" href="#featured" role="tab" aria-controls="featured" aria-selected="true">Featured Items</a></li>
-                            <li><a id="best-tab" id="bestsellers-tab" data-toggle="tab" href="#bestsellers" role="tab" aria-controls="bestsellers" aria-selected="false">Bestsellers</a></li>
-                            <li><a id="sale-tab" id="sale-tab" data-toggle="tab" href="#sale" role="tab" aria-controls="sale" aria-selected="false">On Sale</a></li>
+                            <li><a id="bestsellers-tab" data-toggle="tab" href="#bestsellers" role="tab" aria-controls="bestsellers" aria-selected="false">Bestsellers</a></li>
+                            <li><a id="sale-tab" data-toggle="tab" href="#sale" role="tab" aria-controls="sale" aria-selected="false">On Sale</a></li>
                         </ul>
                         <div class="items-nav" data-carousel-set="set-1">
                             <div class="items-nav-c items-nav-prev"></div><div class="items-nav-c items-nav-next"></div>
@@ -942,7 +943,7 @@
                     <div class="col-lg-4">
                         <h4>Be first to know</h4>
                         <p>Sign for our newsletter to get<br>notifications about our sales.</p>
-                        <form class="newsletter" action="">
+                        <form class="newsletter">
                             <input type="text" placeholder="Your e-mail"><button type="submit"><i class="fa fa-envelope"></i></button>
                         </form>
                         <p>And follow us on social media:</p>
